[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/GameComponents/Dudelings/art/dudeling_hairs.png" type="Texture" id=1]
[ext_resource path="res://GameComponents/Dudelings/dudeling.gd" type="Script" id=2]
[ext_resource path="res://Assets/GameComponents/Dudelings/art/dudeling_faces.png" type="Texture" id=3]
[ext_resource path="res://Assets/GameComponents/Dudelings/art/dudeling_heads.png" type="Texture" id=4]
[ext_resource path="res://Assets/GameComponents/Dudelings/art/dudeling_hairs_unusual.png" type="Texture" id=5]
[ext_resource path="res://Assets/GameComponents/Dudelings/art/dudeling_jerseys.png" type="Texture" id=6]
[ext_resource path="res://Assets/GameComponents/Dudelings/art/dudeling_bodies.png" type="Texture" id=7]
[ext_resource path="res://Assets/GameComponents/Dudelings/art/dudeling-hairs-normalmap.png" type="Texture" id=8]
[ext_resource path="res://Assets/GameComponents/Dudelings/art/dudeling-hairs-normalmap-unusual.png" type="Texture" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 25.0
height = 150.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 30.0
height = 155.0

[node name="Dudeling" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 2 )

[node name="Body" type="Node2D" parent="."]

[node name="BodySprite" type="Sprite" parent="Body"]
position = Vector2( 0, -8 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
hframes = 3

[node name="JerseySprite" type="Sprite" parent="Body"]
position = Vector2( -26, -108 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
centered = false
hframes = 3
vframes = 8

[node name="HeadSprite" type="Sprite" parent="Body"]
position = Vector2( 0, -59 )
texture = ExtResource( 4 )
offset = Vector2( 0, -15 )
hframes = 3
vframes = 7

[node name="FaceSprite" type="Sprite" parent="Body/HeadSprite"]
position = Vector2( 0, -16 )
texture = ExtResource( 3 )
hframes = 7
vframes = 3

[node name="HairSprite" type="Sprite" parent="Body/HeadSprite"]
position = Vector2( 0, -38 )
texture = ExtResource( 1 )
normal_map = ExtResource( 8 )
hframes = 3
vframes = 4

[node name="UnusualHairSprite" type="Sprite" parent="Body/HeadSprite"]
position = Vector2( 0, -37 )
texture = ExtResource( 5 )
normal_map = ExtResource( 9 )
hframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 2 )
